<resources>
    <string name="empty" />
    <string name="app_name">VDH</string>
    <string name="choose_place">Choisissez un lieu</string>
    <string name="take_photo">Prendre</string>
    <string name="add_photo">Ajouter</string>
    <string name="enter_comment">Ajouter un commentaire</string>
    <string name="save">Sauvegarder</string>
    <string name="share">Partager</string>
    <string name="send">Envoyer</string>
    <string name="sync_date_fmt">Envoyé %1s</string>
    <string name="save_date_fmt">Sauvegardé %1s</string>
    <string name="send_report_success">Rapport envoye</string>
    <string name="save_report_success">Rapport sauvegrade</string>
    <string name="delete_report_success">Rapport supprime</string>
    <string name="report_error">Une erreur s\'est produite</string>
    <string name="mandatory_fields_missing_error">Le lieu et le statut sont obligatoires</string>

    <string name="status_caution">Autre obstacle</string>
    <string name="status_snow">Enneigé</string>
    <string name="status_ice">Glacé</string>
    <string name="status_clear">Dénneigé</string>
    <string name="status_none">Tous</string>

    <string name="no_photo">Pas de photo</string>
    <string name="no_comment">Pas de commentaire</string>
    <string name="remove_report">Supprimer</string>
    <string name="share_report_title">Rapport d\'etat des pistes</string>
    <string name="share_report_content">
        Localisation: %1s \n\n
        Status: %2s \n\n
        Commentaire: %3s
    </string>
    <string name="filter_status">Filtrer par status</string>
    <string name="filter_hours">Filtrer par heure d\'ajout</string>
    <string name="filter_hours_title">Ajouté il y a</string>
    <string name="filter_path">Filtrer par type de piste</string>

    <plurals name="hours">
        <item quantity="one">heure</item>
        <item quantity="other">heures</item>
    </plurals>

    <string name="four_seasons">Piste 4 saisons</string>
    <string name="three_seasons">Piste 3 saisons</string>

    <string name="settings_feedback_title">Nous contacter</string>
    <string name="settings_feedback_summary">Proposer une amelioration ou signaler un bug</string>
    <string name="settings_menu">Reglage</string>
    <string name="settings_header">Une application developpee par L\'Assosiation pour la Mobilite Active de Ville-Marie - AMA-VM</string>
    <string name="settings_team_category_title">L\'equipe</string>

    <string name="settings_team_category">L\'equipe</string>

    <string name="settings_team_yo">Yohann</string>
    <string name="settings_team_yo_role">Magicien du mobile</string>

    <string name="settings_team_tom">Tom</string>
    <string name="settings_team_tom_role">Super hero du design</string>

    <string name="settings_team_karim">Karim</string>
    <string name="settings_team_karim_role">Guru a une roue</string>

    <string name="settings_sign_in_title">Se connecter</string>
    <string name="settings_sign_in_subtitle">Connectez vous pour conserver vos rapport entre appareils</string>

    <string name="settings_sign_out_title">Se deconnecter</string>

    <string name="settings_admin_title">Administration</string>
    <string name="settings_admin_subtitle">Adminstrer les rapports</string>
    <string name="settings_ama_mail">mailto:ama.ville.marie@gmail.com</string>
    <string name="settings_ama_fb_page">https://www.facebook.com/groups/AMAVM/</string>

    <string name="accept_report">Accepter</string>
    <string name="refuse_report">Refuser</string>

    <string name="filter_pending_reports">En attente</string>
    <string name="filter_valid_reports">Valide</string>
    <string name="filter_refused_reports">Refuse</string>

    <string name="update_report_error">Impossible de mettre a jour le rapport</string>

</resources>