<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewModel" type="app.vdh.org.vdhapp.viewmodels.ReportingViewModel"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".activities.ReportingActivity">

            <android.support.design.card.MaterialCardView
                android:id="@+id/placePickerCard"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                app:layout_constraintDimensionRatio="16:9"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.button.MaterialButton
                        android:id="@+id/placePickerIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_add_place"
                        android:text="@string/choose_place"
                        android:onClick="@{() -> viewModel.onPlacePickerButtonCLicked()}"
                        app:visible="@{viewModel.placeName == null}"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"/>

                    <com.google.android.gms.maps.MapView
                        android:id="@+id/placePickerMapView"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        app:placeName="@{viewModel.placeName}"
                        app:placeLocation="@{viewModel.placeLocation}"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/placePickerTitle"
                        app:visible="@{viewModel.placeLocation != null}"/>

                    <TextView
                        android:id="@+id/placePickerTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center_horizontal"
                        android:text="@{viewModel.placeName}"
                        android:padding="8dp"
                        style="@style/TextAppearance.AppCompat.Title"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:visible="@{viewModel.placeLocation != null}"
                        tools:text="Place name"/>

                </android.support.constraint.ConstraintLayout>

            </android.support.design.card.MaterialCardView>

            <android.support.design.card.MaterialCardView
                android:id="@+id/photoPickerCard"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="4:3"
                android:layout_marginStart="@dimen/medium_spacing"
                android:layout_marginBottom="@dimen/medium_spacing"
                android:layout_marginTop="@dimen/medium_spacing"
                android:layout_marginEnd="@dimen/small_spacing"
                android:foreground="?android:attr/selectableItemBackground"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/statusCard"
                app:layout_constraintTop_toBottomOf="@id/placePickerCard">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.button.MaterialButton
                        android:id="@+id/photoPickerTakeFab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.Button.Icon"
                        app:icon="@drawable/ic_take_photo"
                        app:visible="@{viewModel.picturePath == null}"
                        android:text="@string/take_photo"
                        android:onClick="@{() -> viewModel.onTakePhotoButtonClicked()}"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/photoPickerChooseFab"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"/>

                    <android.support.design.button.MaterialButton
                        android:id="@+id/photoPickerChooseFab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.Button.Icon"
                        app:icon="@drawable/ic_add_photo"
                        android:text="@string/add_photo"
                        app:visible="@{viewModel.picturePath == null}"
                        android:onClick="@{() -> viewModel.onPhotoFromGalleryButtonClicked()}"
                        app:layout_constraintTop_toBottomOf="@+id/photoPickerTakeFab"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"/>


                    <ImageView
                        android:id="@+id/photoPickerImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcUrl="@{viewModel.picturePath}"
                        app:visible="@{viewModel.picturePath != null}"/>


                </android.support.constraint.ConstraintLayout>

            </android.support.design.card.MaterialCardView>

            <android.support.design.card.MaterialCardView
                android:id="@+id/statusCard"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/small_spacing"
                android:layout_marginBottom="@dimen/medium_spacing"
                android:layout_marginTop="@dimen/medium_spacing"
                android:layout_marginEnd="@dimen/medium_spacing"
                app:layout_constraintDimensionRatio="4:3"
                android:foreground="?android:attr/selectableItemBackground"
                app:layout_constraintLeft_toRightOf="@id/photoPickerCard"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/placePickerCard">
            </android.support.design.card.MaterialCardView>

            <android.support.v7.widget.CardView
                android:id="@+id/commentCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                contentPadding="16dp"
                android:layout_margin="16dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/photoPickerCard"
                app:layout_constraintBottom_toBottomOf="parent">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="150">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/commentTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.reportComment}"
                        android:hint="@string/enter_comment"
                        android:maxLength="150"/>

                </android.support.design.widget.TextInputLayout>


            </android.support.v7.widget.CardView>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</layout>
